--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src="https://unpkg.com/react@17/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
-<!--     <script src="timer.js"></script> -->
+    <script src="timer.js"></script>
   <style>
     button {
       padding: 10px 20px;
