--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <script type="text/babel">
       import React from 'react';
       import ReactDOM from 'react-dom';
-      import Timer from 'timer.js';
+      import Timer from './timer.js';
 
       ReactDOM.render(<Timer />, document.getElementById('root'));
     </script>
